Se agrego pagina Commit

--- a/Taller-Git/Taller-Git/Maestro.xaml
+++ b/Taller-Git/Taller-Git/Maestro.xaml
@@ -35,5 +35,15 @@
             TextColor="White"
             FontAttributes="Bold"
             FontSize="15"/>
+
+        <Button 
+             Text="Commit"
+            Clicked="OnNavigateToCommitPage"
+             Margin="20,10"
+            BackgroundColor="#023047"
+            TextColor="White"
+            FontAttributes="Bold"
+            FontSize="15"/>
+
     </VerticalStackLayout>
 </ContentPage>
